--- a/templates/structure/pages/_types/_landing.twig
+++ b/templates/structure/pages/_types/_landing.twig
@@ -16,11 +16,24 @@
 <section id="landing--subpages">
   <div class="inside">
 
-    {# Custom Navigation for landing page #}
-    {% if craft.app.request.segments | first == 'government' %}
-      {% include 'modules/nav/_block_subpage' with { entry: craft.entries.section('departmentsLanding').all()|first } %}
-      {% include 'modules/nav/_block_subpage' with { entry: craft.entries.section('boardsLanding').all()|first } %}
-      {% include 'modules/nav/_block_subpage' with { entry: craft.entries.section('minutesAgendasLanding').all()|first } %}
+    {# Custom Navigation for Government Section #}
+    {% if (craft.app.request.segments | first == 'government') %}
+      
+      {# Top-Level landing page #}
+      {% if craft.app.request.segments | length < 2 %}
+        {% include 'modules/nav/_block_subpage' with { entry: craft.entries.section('departmentsLanding').all()|first } %}
+        {% include 'modules/nav/_block_subpage' with { entry: craft.entries.section('boardsLanding').all()|first } %}
+        {% include 'modules/nav/_block_subpage' with { entry: craft.entries.section('minutesAgendasLanding').all()|first } %}
+      
+      {# Sub-level landing page #}
+      {% elseif subPages is defined %}
+
+        {% for entry in subPages %}
+          {% include 'modules/nav/_block_subpage' %}
+        {% endfor %}
+        
+      {% endif %}
+
     {% endif %}
 
     {% set pages = craft.entries({
