--- a/templates/structure/boards/_entry.twig
+++ b/templates/structure/boards/_entry.twig
@@ -1,14 +1,33 @@
 {#
     Boards Channel Entry Template
 #}
+{% set parallax = (entry.primaryImage | length) ? '_parallax' : '' %}
 
-{% extends "layouts/columns/_one" %}
+{% extends 'layouts/columns/_two' ~ parallax %}
 
 {% set title = entry.title %}
+{% set type = 'standard' %}
+
+
+{# HEADER IMAGE #}
+{% block headerBlock %}
+  {% if entry.primaryImage | length %}{% include "modules/content/_header-block" %}{% endif %}
+{% endblock %}
 
 {# HTML #}
 {% block main %}
 
-<h1>{{ entry.title | typogrify }}</h1>
+    <header>
+    <h1>{{ entry.title | typogrify }}</h1>
+    <p class="lead">{{ entry.leadIn | typogrify }}</p>
+    </header>
 
+    {% include "modules/content/_page-content" %}
+    {% include "modules/content/_page-content-attachments" %}
+
+{% endblock %}
+
+{# ASIDE #}
+{% block aside %}
+  {% include "modules/content/_block-quick-links" %}
 {% endblock %}
