departments and boards pages and subpages

--- a/src/styles/modules/_block-quick-links.styl
+++ b/src/styles/modules/_block-quick-links.styl
@@ -1,3 +1,4 @@
+#block--subpages
 #block--quick-links
   background-color $module-quick-links-background-color
   box-shadow $module-quick-links-box-shadow
@@ -37,6 +38,7 @@
 
 
 // STYLES FOR WHEN USED IN MAIN COLUMN
+#content #block--subpages
 #content #block--quick-links
   > h3
     text-align left
@@ -62,6 +64,7 @@
 
 
 // STYLES FOR WHEN USED IN ASIDE COLUMN
+aside #block--subpages
 aside #block--quick-links
   a
     color $module-quick-links-link-color
