--- a/templates/structure/departments/index.twig
+++ b/templates/structure/departments/index.twig
@@ -16,7 +16,7 @@
 {# HTML #}
 {% block main %}
 
-    {% set subPages = craft.entries.section('departments').order('title').all() %}
+    {% set subPages = craft.entries.section('departments').orderBy('title').all() %}
 
     {% include 'structure/pages/_types/_landing' with { subPages: subPages } %}
 
