aside positioning tweaks, closes #15

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -358,6 +358,7 @@ $module-subpages-arrow-color = $light-blue
 
 $module-quick-links-box-shadow = $global-block-box-shadow
 $module-quick-links-background-color = $white
+$module-quick-links-top-border = rem(4px) solid $light-blue
 $module-quick-links-title-font = $sans-serif-headline
 $module-quick-links-title-size = rem(24px)
 $module-quick-links-title-transform = uppercase
