--- a/src/styles/modules/_block-quick-links.styl
+++ b/src/styles/modules/_block-quick-links.styl
@@ -1,6 +1,7 @@
 #block--subpages
 #block--quick-links
   background-color $module-quick-links-background-color
+  border-top $module-quick-links-top-border
   box-shadow $module-quick-links-box-shadow
   padding rem(60px) rem(30px)
   margin-bottom 2em
@@ -10,7 +11,7 @@
     font-family $module-quick-links-title-font
     font-size $module-quick-links-title-size
     margin 0 0 rem(30px)
-    text-align center
+    text-align left
     text-transform $module-quick-links-title-transform
     &:before
       background-color: $module-quick-links-link-color
