--- a/templates/modules/content/_block-sub-pages.twig
+++ b/templates/modules/content/_block-sub-pages.twig
@@ -2,7 +2,7 @@
   {% set subPages = craft.entries({
     'section' : 'pages',
     'descendantOf' : entry.id
-  }) %}
+  }).all() %}
 {% endif %}
 
 {% if subPages | length %}
