--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -30,6 +30,7 @@ tablet-min = 736px
 mobile-max = tablet-min - 1px
 tablet-max = (rupture.tablet-cutoff) - 1px
 desktop-min = (rupture.tablet-cutoff)
+desktop-max = (rupture.desktop-cutoff) - 1px
 
 
 // $sans-serif = -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, sans-serif
