about page mostly complete

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -729,6 +729,112 @@ $list-content-row-padding-desktop = rem(14.5px) $list-content-row-padding-deskto
 
 
 // ------------------------------------------------------
+// ------ ABOUT PAGE
+
+$about-page-about-section-icon-height-mobile = rem(98px)
+$about-page-about-section-icon-height-desktop = rem(107.5px)
+
+$about-page-about-section-headline-size-mobile = rem(32px)
+$about-page-about-section-headline-size-desktop = rem(40px)
+$about-page-about-section-headline-font = $sans-serif-headline
+$about-page-about-section-headline-transform = uppercase
+$about-page-about-section-headline-color = $navy
+
+$about-page-about-section-text-size-mobile = rem(18px)
+$about-page-about-section-text-size-desktop = rem(18px)
+$about-page-about-section-text-color = $navy
+$about-page-about-section-text-font = $sans-serif
+$about-page-about-section-text-transform = normal
+
+
+$about-page-mission-section-background = $navy
+$about-page-mission-section-headline-size-mobile = rem(32px)
+$about-page-mission-section-headline-size-desktop = rem(40px)
+$about-page-mission-section-headline-color = $white
+$about-page-mission-section-headline-font = $sans-serif-headline
+$about-page-mission-section-headline-transform = uppercase
+
+$about-page-mission-section-text-size-mobile = rem(18px)
+$about-page-mission-section-text-size-desktop = rem(18px)
+$about-page-mission-section-text-color = $white
+$about-page-mission-section-text-font = $sans-serif
+$about-page-mission-section-text-transform = normal
+
+
+$about-page-mayor-section-intro-size-mobile = rem(14px)
+$about-page-mayor-section-intro-size-desktop = rem(14px)
+$about-page-mayor-section-intro-font = $sans-serif-headline
+$about-page-mayor-section-intro-transform = uppercase
+$about-page-mayor-section-intro-color = $light-blue
+
+$about-page-mayor-section-headline-size-mobile = rem(32px)
+$about-page-mayor-section-headline-size-desktop = rem(36px)
+$about-page-mayor-section-headline-font = $sans-serif-headline
+$about-page-mayor-section-headline-transform = normal
+$about-page-mayor-section-headline-color = $navy
+
+$about-page-mayor-section-subheadline-size-mobile = rem(18px)
+$about-page-mayor-section-subheadline-size-desktop = rem(21px)
+$about-page-mayor-section-subheadline-font = $serif
+$about-page-mayor-section-subheadline-style = italic
+$about-page-mayor-section-subheadline-transform = normal
+$about-page-mayor-section-subheadline-color = $light-blue
+
+$about-page-mayor-section-text-size-mobile = rem(18px)
+$about-page-mayor-section-text-size-desktop = rem(18px)
+$about-page-mayor-section-text-color = $navy
+$about-page-mayor-section-text-font = $sans-serif
+$about-page-mayor-section-text-font-weight = $font-weight.normal
+$about-page-mayor-section-text-transform = normal
+
+$about-page-mayor-section-name-size-mobile = rem(18px)
+$about-page-mayor-section-name-size-desktop = rem(18px)
+$about-page-mayor-section-name-color = $navy
+$about-page-mayor-section-name-font = $sans-serif
+$about-page-mayor-section-name-font-weight = $font-weight.bold
+$about-page-mayor-section-name-transform = normal
+
+
+$about-page-history-section-background-color = $black
+$about-page-history-section-headline-size-mobile = rem(36px)
+$about-page-history-section-headline-size-desktop = rem(60px)
+$about-page-history-section-headline-color = $white
+$about-page-history-section-headline-font = $sans-serif-headline
+$about-page-history-section-headline-transform = uppercase
+
+$about-page-history-section-text-size-mobile = rem(18px)
+$about-page-history-section-text-size-desktop = rem(18px)
+$about-page-history-section-text-color = $white
+$about-page-history-section-text-font = $sans-serif
+$about-page-history-section-text-font-weight = $font-weight.normal
+$about-page-history-section-text-transform = normal
+
+
+$about-page-fact-block-background-color = $white
+$about-page-fact-block-box-shadow = $global-block-box-shadow
+
+$about-page-facts-section-headline-size-mobile = rem(32px)
+$about-page-facts-section-headline-size-desktop = rem(40px)
+$about-page-facts-section-headline-color = $navy
+$about-page-facts-section-headline-font = $sans-serif-headline
+$about-page-facts-section-headline-transform = uppercase
+
+$about-page-fact-block-text-size-mobile = rem(21px)
+$about-page-fact-block-text-size-desktop = rem(24px)
+$about-page-fact-block-text-color = $light-blue
+$about-page-fact-block-text-font = $sans-serif
+$about-page-fact-block-text-font-weight = $font-weight.bold
+$about-page-fact-block-text-transform = normal
+
+$about-page-fact-block-reference-size-mobile = rem(14px)
+$about-page-fact-block-reference-size-desktop = rem(16px)
+$about-page-fact-block-reference-color = $navy
+$about-page-fact-block-reference-font = $sans-serif-headline
+$about-page-fact-block-reference-font-weight = $font-weight.bold
+$about-page-fact-block-reference-transform = uppercase
+
+
+// ------------------------------------------------------
 // ------ CONTACT PAGE
 
 $contact-page-address-section-title-size = rem(18px)
