jobs base template

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -968,4 +968,23 @@ $news-events-filter-label-size-desktop = rem(12.5px)
 $news-events-filter-label-transform = uppercase
 
 
+// ------------------------------------------------------
+// ------ LANDING PAGE - EMPLOYMENT
+// ------ LIST
+
+$employment-instructions-title-font = $sans-serif-headline
+$employment-instructions-title-transform = uppercase
+$employment-instructions-title-color = $navy
+$employment-instructions-title-mobile = rem(21px)
+$employment-instructions-title-desktop = rem(24px)
+
+$employment-instructions-text-font = $sans-serif
+$employment-instructions-text-transform = normal
+$employment-instructions-text-color = $navy
+$employment-instructions-text-mobile = rem(16px)
+$employment-instructions-text-desktop = rem(18px)
+
+$employment-instructions-top-border = $border-width-base solid $gray94
+
+
 
