--- a/src/styles/site/_layout-list.styl
+++ b/src/styles/site/_layout-list.styl
@@ -75,10 +75,12 @@
       font-size $list-content-row-text-size-mobile
       font-weight $list-content-row-text-weight
       padding $list-content-row-padding-mobile
+      text-align center
 
       +above(l)
         font-size $list-content-row-text-size-desktop
         padding $list-content-row-padding-desktop
+        text-align initial
         // clearfix()
         lost-flex-container: row
 
