--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -37,7 +37,7 @@ desktop-max = (rupture.desktop-cutoff) - 1px
 $sans-serif = 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, sans-serif
 $sans-serif-headline = 'Montserrat', sans-serif
 // $serif2 = georgia, serif
-$serif = 'Playfair Display', georgia, serif
+$serif = 'Noto Serif', georgia, serif
 $code = consolas, monaco, monospace
 
 $line-height-solid = 1
