--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -1,7 +1,7 @@
 @import 'normalize.css/normalize.css'
 
 // Deprecated in favor of https://speedfont.com
-// @import url(//fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i\|Source\+Sans\+Pro:400,400i,700,700i\|Playfair\+Display:700i)
+// @import url(//fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i\|Source\+Sans\+Pro:400,400i,700,700i\|Noto\+Serif:400,400i,700,700i)
 
 @require './_vars'
 @require './mixins/*'
