--- a/templates/layouts/base/_core.twig
+++ b/templates/layouts/base/_core.twig
@@ -13,7 +13,7 @@
 <meta name="theme-color" content="#ffffff">
 
 {# Base #}
-{% do view.registerCssFile('//fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i|Playfair+Display:400,400i,700,700i|Source+Sans+Pro:400,400i,600,600i,700,700i') %}
+{% do view.registerCssFile('//fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i|Noto+Serif:400,400i,700,700i|Source+Sans+Pro:400,400i,600,600i,700,700i') %}
 
 {% if craft.app.config.general.craftEnv == 'local' %}
   {% do view.registerCssFile('/assets/css/master.css') %}
