--- a/templates/singles/about/index.twig
+++ b/templates/singles/about/index.twig
@@ -37,7 +37,7 @@
   {% if aboutBlock.image | length %}
     {% set image = aboutBlock.image.one() %}
     {%- set transformOptions = { width: 1600, height: 1280, quality: 82 } -%}
-    <style>#about--about .about--section-image { background-image: url({{ image.getUrl(transformOptions) }}) }</style>
+    {% css %}#about--about .about--section-image { background-image: url({{ image.getUrl(transformOptions) }}) }{% endcss %}
     <div class="about--section-image"></div>
   {% endif %}
 
@@ -57,15 +57,14 @@
   {% set mayorWelcomeBlock = entry.mayorWelcomeBlock.one() %}
   {% set mayor = mayorWelcomeBlock.mayor.one() %}
   {% set memberName = mayor.personName|trim|replace({'  ': ' '}) %}
-<section id="about--mayor-welcome" class="about--section-two-col">
-  
   {% set image = mayor.staffPhoto.one() %}
   {% if mayorWelcomeBlock.imageOverride | length %}
     {% set image = mayorWelcomeBlock.imageOverride.one() %}
   {% endif %}
   {% set image = mayor.staffPhoto.one() %}
   {%- set transformOptions = { width: 1600, height: 1280, quality: 82 } -%}
-  <style>#about--mayor-welcome .about--section-image { background-image: url({{ image.getUrl(transformOptions) }}) }</style>
+  {% css %}#about--mayor-welcome .about--section-image { background-image: url({{ image.getUrl(transformOptions) }}) }{% endcss %}
+<section id="about--mayor-welcome" class="about--section-two-col">
   <div class="about--section-image"></div>
 
   <div id="about--mayor-welcome--content" class="about--section-text">
@@ -83,12 +82,12 @@
 {% if entry.historyBlock | length %}
   {% set historyBlock = entry.historyBlock.one() %}
 <section id="about--history">
-    {% if historyBlock.backgroundImage | length %}
-      {% set image = historyBlock.backgroundImage.one() %}
-      {%- set transformOptions = { width: 1600, quality: 82 } -%}
-      <style>#about--history--image { background-image: url({{ image.getUrl(transformOptions) }}) }</style>
-      <div id="about--history--image"></div>
-    {% endif %}
+  {% if historyBlock.backgroundImage | length %}
+    {% set image = historyBlock.backgroundImage.one() %}
+    {%- set transformOptions = { width: 1600, quality: 82 } -%}
+    {% css %}#about--history--image { background-image: url({{ image.getUrl(transformOptions) }}) }{% endcss %}
+    <div id="about--history--image"></div>
+  {% endif %}
 
   <div id="about--history--content">
     <div id="about--history--content-text">
