padding tweaks for #23 & #24

--- a/src/styles/modules/_block-quick-links.styl
+++ b/src/styles/modules/_block-quick-links.styl
@@ -3,10 +3,10 @@
   background-color $module-quick-links-background-color
   border-top $module-quick-links-top-border
   box-shadow $module-quick-links-box-shadow
-  padding rem(60px) rem(30px)
+  padding rem(65px) rem(30px) rem(60px)
   margin-bottom 2em
   +above(xl)
-    padding rem(60px) rem(30px)
+    padding rem(66.5px) calc((100vw * (1/36))) rem(65px)
   > h3
     font-family $module-quick-links-title-font
     font-size $module-quick-links-title-size
