--- a/src/styles/site/_about.styl
+++ b/src/styles/site/_about.styl
@@ -283,12 +283,12 @@
   .block--fact
     background-color $about-page-fact-block-background-color
     box-shadow $about-page-fact-block-box-shadow
-    padding rem(31px) rem(15px)
+    padding rem(31px) rem(19.5px) rem(27.5px)
     margin-bottom 2em
     
     +above(m)
       lost-column 12/36 3
-      padding rem(85.5px) calc((100vw * (1/36))) rem(53px)
+      padding rem(85.5px) calc((100vw * (1/36))) rem(54px)
 
     > p
       color $about-page-fact-block-text-color
