remove top margin from about page fact block

--- a/src/styles/site/_about.styl
+++ b/src/styles/site/_about.styl
@@ -295,6 +295,7 @@
       font-family $about-page-fact-block-text-font
       font-size $about-page-fact-block-text-size-mobile
       font-weight $about-page-fact-block-text-font-weight
+      margin-top 0
       text-transform $about-page-fact-block-text-transform
       +above(m)
         $about-page-fact-block-text-size-desktop
